--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -3,23 +3,23 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: 'My Online Courses' # Website name
-baseURL: 'https://example.com/' # Website URL
+title: 'RNIT' # Website name
+baseURL: '#' # Website URL
 
 ############################
 ## PAGE OPTIONS
 ############################
 
-cascade:
-  # Docs folder options
-  - _target:
-      path: /course/**
-    editable: true
-    show_breadcrumb: true
-  # Blog post folder options
-  - _target:
-      path: /post/**
-    show_related: true
+# cascade:
+#   # Docs folder options
+#   - _target:
+#       path: /course/**
+#     editable: true
+#     show_breadcrumb: true
+#   # Blog post folder options
+#   - _target:
+#       path: /post/**
+#     show_related: true
 
 ############################
 ## LANGUAGE
