--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,20 +7,20 @@ main:
   - name: Home
     url: '/'
     weight: 10
-  - name: Courses
-    weight: 20
-    identifier: courses
-  - name: Data science
-    PageRef: course/data-science/_index.md
-    weight: 10
-    parent: courses
-  - name: Robotics
-    PageRef: course/robotics/_index.md
-    weight: 20
-    parent: courses
-  - name: Blog
-    PageRef: post/_index.md
-    weight: 30
+  - name: FAQ
+    url: 'getstarted/faq'
+    weight: 11
+  # - name: Courses
+  #   weight: 20
+  #   identifier: courses
+  # - name: Data science
+  #   PageRef: 
+  #   weight: 10
+  #   parent: courses
+  # - name: Robotics
+  #   PageRef: course/robotics/_index.md
+  #   weight: 20
+  #   parent: courses
   - name: Contact
     PageRef: contact/index.md
     weight: 60
